Cleanup with new JDK 21 features